--- a/EP/localisation/japanese/map/EP_countries_l_japanese.yml
+++ b/EP/localisation/japanese/map/EP_countries_l_japanese.yml
@@ -1036,9 +1036,37 @@
  BAL_DEF:0 "バルチスタン"
  BAL_ADJ:0 "バルチスタン"
  
+ BRN:0 "ブルネイ"
+ BRN_DEF:0 "ブルネイ"
+ BRN_ADJ:0 "ブルネイ"
+ 
+ CSP:0 "カスピ"
+ CSP_DEF:0 "カスピ"
+ CSP_ADJ:0 "カスピ"
+ 
+ FNG:0 "奉天"
+ FNG_DEF:0 "奉天"
+ FNG_ADJ:0 "奉天"
+ 
  GAN:0 "甘粛"
  GAN_DEF:0 "甘粛"
  GAN_ADJ:0 "甘粛"
+ 
+ GZH:0 "貴州"
+ GZH_DEF:0 "貴州"
+ GZH_ADJ:0 "貴州"
+ 
+ HEZ:0 "ヒジャーズ"
+ HEZ_DEF:0 "ヒジャーズ"
+ HEZ_ADJ:0 "ヒジャーズ"
+ 
+ HIL:0 "ハーイル"
+ HIL_DEF:0 "ハーイル"
+ HIL_ADJ:0 "ハーイル"
+ 
+ HNN:0 "湖南"
+ HNN_DEF:0 "湖南"
+ HNN_ADJ:0 "湖南"
  
  HYD:0 "ハイデラバード"
  HYD_DEF:0 "ハイデラバード"
@@ -1048,9 +1076,21 @@
  KAS_DEF:0 "カシミール"
  KAS_ADJ:0 "カシミール"
  
+ KUM:0 "クムル"
+ KUM_DEF:0 "クムル"
+ KUM_ADJ:0 "クムル"
+ 
+ MSC:0 "マスカット"
+ MSC_DEF:0 "マスカット"
+ MSC_ADJ:0 "マスカット"
+ 
  MYS:0 "マイソール"
  MYS_DEF:0 "マイソール"
  MYS_ADJ:0 "マイソール"
+ 
+ NAJ:0 "ナジュド"
+ NAJ_DEF:0 "ナジュド"
+ NAJ_ADJ:0 "ナジュド"
  
  NIG:0 "寧夏"
  NIG_DEF:0 "寧夏"
@@ -1064,12 +1104,76 @@
  QIG_DEF:0 "青海"
  QIG_ADJ:0 "青海"
  
+ SCH:0 "四川"
+ SCH_DEF:0 "四川"
+ SCH_ADJ:0 "四川"
+ 
+ SGH:0 "上海"
+ SGH_DEF:0 "上海"
+ SGH_ADJ:0 "上海"
+ 
+ SHD:0 "山東"
+ SHD_DEF:0 "山東"
+ SHD_ADJ:0 "山東"
+ 
+ SKM:0 "シッキム"
+ SKM_DEF:0 "シッキム"
+ SKM_ADJ:0 "シッキム"
+ 
+ SRW:0 "サラワク"
+ SRW_DEF:0 "サラワク"
+ SRW_ADJ:0 "サラワク"
+ 
+ TIA:0 "天津"
+ TIA_DEF:0 "天津"
+ TIA_ADJ:0 "天津"
+ 
+ TNG:0 "タンガニスタン"
+ TNG_DEF:0 "タンガニスタン"
+ TNG_ADJ:0 "タンガニスタン"
+ 
+ TRK:0 "トルキスタン"
+ TRK_DEF:0 "トルキスタン"
+ TRK_ADJ:0 "トルキスタン"
+ 
  TRV:0 "トラヴァンコール"
  TRV_DEF:0 "トラヴァンコール"
  TRV_ADJ:0 "トラヴァンコール"
  
+ XIK:0 "西康"
+ XIK_DEF:0 "西康"
+ XIK_ADJ:0 "西康"
+ 
 #ヨーロッパ
+ ADR:0 "アンドラ"
+ ADR_DEF:0 "アンドラ"
+ ADR_ADJ:0 "アンドラ"
+ 
+ GBR:0 "グレートブリテン"
+ GBR_DEF:0 "グレートブリテン"
+ GBR_ADJ:0 "グレートブリテン"
+ 
+ LIE:0 "リヒテンシュタイン"
+ LIE_DEF:0 "リヒテンシュタイン"
+ LIE_ADJ:0 "リヒテンシュタイン"
+ 
+ MCO:0 "モナコ"
+ MCO_DEF:0 "モナコ"
+ MCO_ADJ:0 "モナコ"
+ 
+ NTL:0 "ネーデルラント"
+ NTL_DEF:0 "ネーデルラント"
+ NTL_ADJ:0 "ネーデルラント"
+ 
+ SMR:0 "サンマリノ"
+ SMR_DEF:0 "サンマリノ"
+ SMR_ADJ:0 "サンマリノ"
+ 
 #アフリカ
+ TGE:0 "タンジェ"
+ TGE_DEF:0 "タンジェ"
+ TGE_ADJ:0 "タンジェ"
+ 
 #新大陸
 #大洋州
 #アメリカ諸州
