--- a/EP/localisation/japanese/map/EP_countries_long_l_japanese.yml
+++ b/EP/localisation/japanese/map/EP_countries_long_l_japanese.yml
@@ -2,20 +2,38 @@
 ##バニラ
 #アジア
  
+ AFG_kingdom:0 "アフガニスタン王国"
+ AFG_kingdom_DEF:0 "アフガニスタン王国"
  
  
+ ARM_republic:0 "アルメニア共和国"
+ ARM_republic_DEF:0 "アルメニア共和国"
  
+ AZR_republic:0 "アゼルバイジャン共和国"
+ AZR_republic_DEF:0 "アゼルバイジャン共和国"
  
  
+ BHU_kingdom:0 "ブータン王国"
+ BHU_kingdom_DEF:0 "ブータン王国"
  
  
+ BUK_khanate:0 "ブハラ・ハン国"
+ BUK_khanate_DEF:0 "ブハラ・ハン国"
  
  
  
+ CHI_minguo:0 "中華民国"
+ CHI_minguo_DEF:0 "中華民国"
+ CHI_soviet_peoples_republic:0 "中華ソビエト人民共和国"
+ CHI_soviet_peoples_republic_DEF:0 "中華ソビエト人民共和国"
  
  
  
+ GEO_republic:0 "グルジア共和国"
+ GEO_republic_DEF:0 "グルジア共和国"
  
+ GXC_warlord:0 "広西軍閥"
+ GXC_warlord_DEF:0 "広西軍閥"
  
  
  
@@ -24,6 +42,8 @@
  
  
  
+ KHI_khanate:0 "ヒヴァ・ハン国"
+ KHI_khanate_DEF:0 "ヒヴァ・ハン国"
  
  
  
@@ -34,10 +54,18 @@
  
  
  
+ MEN_warlord:0 "蒙古軍閥"
+ MEN_warlord_DEF:0 "蒙古軍閥"
  
  
+ MON_peoples_republic:0 "モンゴル人民共和国"
+ MON_peoples_republic_DEF:0 "モンゴル人民共和国"
  
+ NEP_kingdom:0 "ネパール王国"
+ NEP_kingdom_DEF:0 "ネパール王国"
  
+ OMA_imamate:0 "オマーン・イマーム国"
+ OMA_imamate_DEF:0 "オマーン・イマーム国"
  
  
  
@@ -46,37 +74,61 @@
  
  
  
+ SHX_warlord:0 "山西軍閥"
+ SHX_warlord_DEF:0 "山西軍閥"
  
+ SIA_kingdom:0 "シャム王国"
+ SIA_kingdom_DEF:0 "シャム王国"
  
+ SIK_ma_warlord:0 "新疆馬軍閥"
+ SIK_ma_warlord_DEF:0 "新疆馬軍閥"
+ SIK_warlord:0 "新疆軍閥"
+ SIK_warlord_DEF:0 "新疆軍閥"
  
  
  
  
  
  
+ TIB_kingdom:0 "チベット王国"
+ TIB_kingdom_DEF:0 "チベット王国"
  
  
  
  
+ TUV_peoples_republic:0 "トゥヴァ人民共和国"
+ TUV_peoples_republic_DEF:0 "トゥヴァ人民共和国"
  
  
  
  
  
  
+ YEM_mutawakkilite_kingdom:0 "イエメン・ムタワッキリテ王国"
+ YEM_mutawakkilite_kingdom_DEF:0 "イエメン・ムタワッキリテ王国"
  
  
+ YUN_warlord:0 "雲南軍閥"
+ YUN_warlord_DEF:0 "雲南軍閥"
  
 #ヨーロッパ
  
+ ALB_kingdom:0 "アルバニア王国"
+ ALB_kingdom_DEF:0 "アルバニア王国"
  
  
  
+ BEL_kingdom:0 "ベルギー王国"
+ BEL_kingdom_DEF:0 "ベルギー王国"
  
+ BLR_republic:0 "ベラルーシ共和国"
+ BLR_republic_DEF:0 "ベラルーシ共和国"
  
  
  
  
+ BUL_tsardom:0 "ブルガリア・ツァール国"
+ BUL_tsardom_DEF:0 "ブルガリア・ツァール国"
  
  
  
@@ -86,16 +138,28 @@
  
  
  
+ DEN_kingdom:0 "デンマーク王国"
+ DEN_kingdom_DEF:0 "デンマーク王国"
  
  
+ DON_republic:0 "ドン共和国"
+ DON_republic_DEF:0 "ドン共和国"
  
  
  
+ EST_duchy:0 "エストニア公国"
+ EST_duchy_DEF:0 "エストニア公国"
  
+ FIN_kingdom:0 "フィンランド王国"
+ FIN_kingdom_DEF:0 "フィンランド王国"
  
+ FRA_republic:0 "フランス共和国"
+ FRA_republic_DEF:0 "フランス共和国"
  
  
  
+ GRE_kingdom:0 "ギリシャ王国"
+ GRE_kingdom_DEF:0 "ギリシャ王国"
  
  
  
@@ -104,6 +168,8 @@
  
  
  
+ KAL_republic:0 "カルムイク共和国"
+ KAL_republic_DEF:0 "カルムイク共和国"
  
  
  
@@ -111,9 +177,17 @@
  
  
  
+ KUB_peoples_republic:0 "クバン人民共和国"
+ KUB_peoples_republic_DEF:0 "クバン人民共和国"
  
+ LAT_duchy:0 "ラトビア公国"
+ LAT_duchy_DEF:0 "ラトビア公国"
  
+ LIT_kingdom:0 "リトアニア王国"
+ LIT_kingdom_DEF:0 "リトアニア王国"
  
+ LUX_grand_duchy:0 "ルクセンブルク大公国"
+ LUX_grand_duchy_DEF:0 "ルクセンブルク大公国"
  
  
  
@@ -122,15 +196,25 @@
  
  
  
+ NCC_mountainous_republic:0 "北コーカサス山岳共和国"
+ NCC_mountainous_republic_DEF:0 "北コーカサス山岳共和国"
  
  
  
  
+ NOR_kingdom:0 "ノルウェー王国"
+ NOR_kingdom_DEF:0 "ノルウェー王国"
  
  
+ POL_republic:0 "ポーランド共和国"
+ POL_republic_DEF:0 "ポーランド共和国"
  
+ POR_republic:0 "ポルトガル共和国"
+ POR_republic_DEF:0 "ポルトガル共和国"
  
  
+ ROM_kingdom:0 "ルーマニア王国"
+ ROM_kingdom_DEF:0 "ルーマニア王国"
  
  
  
@@ -140,16 +224,28 @@
  
  
  
+ SOV_socialist_republics_union:0 "ソビエト社会主義共和国連邦"
+ SOV_socialist_republics_union_DEF:0 "ソビエト社会主義共和国連邦"
  
+ SPR_republic:0 "スペイン共和国"
+ SPR_republic_DEF:0 "スペイン共和国"
  
  
+ SWE_kingdom:0 "スウェーデン王国"
+ SWE_kingdom_DEF:0 "スウェーデン王国"
  
+ SWI_confederation:0 "スイス連邦"
+ SWI_confederation_DEF:0 "スイス連邦"
  
  
  
  
  
+ UKR_kingdom:0 "ウクライナ王国"
+ UKR_kingdom_DEF:0 "ウクライナ王国"
  
+ VAT_city_state:0 "バチカン市国"
+ VAT_city_state_DEF:0 "バチカン市国"
  
  
  
@@ -172,6 +268,13 @@
  
  
  
+ EGY_kingdom:0 "エジプト王国"
+ EGY_kingdom_DEF:0 "エジプト王国"
+ 
+ 
+ 
+ ETH_empire:0 "エチオピア帝国"
+ ETH_empire_DEF:0 "エチオピア帝国"
  
  
  
@@ -183,9 +286,8 @@
  
  
  
- 
- 
- 
+ LIB_republic:0 "リベリア共和国"
+ LIB_republic_DEF:0 "リベリア共和国"
  
  
  
@@ -216,38 +318,78 @@
  
  
 #新大陸
+ ARG_republic:0 "アルゼンチン共和国"
+ ARG_republic_DEF:0 "アルゼンチン共和国"
+ 
+ 
+ 
+ BOL_republic:0 "ボリビア共和国"
+ BOL_republic_DEF:0 "ボリビア共和国"
+ 
+ BRA_united_states:0 "ブラジル合衆国"
+ BRA_united_states_DEF:0 "ブラジル合衆国"
+ 
+ 
+ 
+ CHL_republic:0 "チリ共和国"
+ CHL_republic_DEF:0 "チリ共和国"
+ 
+ COL_republic:0 "コロンビア共和国"
+ COL_republic_DEF:0 "コロンビア共和国"
+ 
+ COS_republic:0 "コスタリカ共和国"
+ COS_republic_DEF:0 "コスタリカ共和国"
+ 
+ 
+ CUB_republic:0 "キューバ共和国"
+ CUB_republic_DEF:0 "キューバ共和国"
+ 
+ DOM_republic:0 "ドミニカーナ共和国"
+ DOM_republic_DEF:0 "ドミニカーナ共和国"
+ 
+ 
+ ECU_republic:0 "エクアドル共和国"
+ ECU_republic_DEF:0 "エクアドル共和国"
+ 
+ ELS_republic:0 "エルサルバドル共和国"
+ ELS_republic_DEF:0 "エルサルバドル共和国"
+ 
+ 
+ GUA_republic:0 "グアテマラ共和国"
+ GUA_republic_DEF:0 "グアテマラ共和国"
+ 
+ 
+ HAI_republic:0 "ハイチ共和国"
+ HAI_republic_DEF:0 "ハイチ共和国"
+ 
+ HON_republic:0 "ホンジュラス共和国"
+ HON_republic_DEF:0 "ホンジュラス共和国"
+ 
+ 
+ MEX_united_states:0 "メキシコ合衆国"
+ MEX_united_states_DEF:0 "メキシコ合衆国"
+ 
+ NIC_republic:0 "ニカラグア共和国"
+ NIC_republic_DEF:0 "ニカラグア共和国"
+ 
+ PAN_republic:0 "パナマ共和国"
+ PAN_republic_DEF:0 "パナマ共和国"
+ 
+ PAR_republic:0 "パラグアイ共和国"
+ PAR_republic_DEF:0 "パラグアイ共和国"
+ 
+ PRU_republic:0 "ペルー共和国"
+ PRU_republic_DEF:0 "ペルー共和国"
  
  
  
  
+ URG_oriental_republic:0 "ウルグアイ東方共和国"
+ URG_oriental_republic_DEF:0 "ウルグアイ東方共和国"
  
  
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
+ VEN_republic:0 "ベネズエラ共和国"
+ VEN_republic_DEF:0 "ベネズエラ共和国"
  
  
 #大洋州
@@ -265,16 +407,86 @@
 ##追加国家
 #アジア
  
+ BRN_sultanate:0 "ブルネイ・スルタン国"
+ BRN_sultanate_DEF:0 "ブルネイ・スルタン国"
+ 
+ 
+ FNG_warlord:0 "奉天軍閥"
+ FNG_warlord_DEF:0 "奉天軍閥"
+ 
+ 
+ GZH_warlord:0 "貴州軍閥"
+ GZH_warlord_DEF:0 "貴州軍閥"
+ 
+ 
+ 
+ HNN_warlord:0 "湖南軍閥"
+ HNN_warlord_DEF:0 "湖南軍閥"
+ 
+ 
+ 
+ KUM_khanate:0 "クムル・ハン国"
+ KUM_khanate_DEF:0 "クムル・ハン国"
  
  
  
  
+ NIG_ma_warlord:0 "寧夏馬軍閥"
+ NIG_ma_warlord_DEF:0 "寧夏馬軍閥"
+ 
+ OTT_sublime_state:0 "崇高なるオスマン国"
+ OTT_sublime_state_DEF:0 "崇高なるオスマン国"
+ 
+ QIG_ma_warlord:0 "青海馬軍閥"
+ QIG_ma_warlord_DEF:0 "青海馬軍閥"
+ 
+ SCH_warlord:0 "四川軍閥"
+ SCH_warlord_DEF:0 "四川軍閥"
+ 
+ SGH_international_settlement:0 "上海共同租界"
+ SGH_international_settlement_DEF:0 "上海共同租界"
+ 
+ SHD_warlord:0 "山東軍閥"
+ SHD_warlord_DEF:0 "山東軍閥"
+ 
+ SKM_kingdom:0 "シッキム王国"
+ SKM_kingdom_DEF:0 "シッキム王国"
+ 
+ SRW_raj:0 "サラワク王国"
+ SRW_raj_DEF:0 "サラワク王国"
+ 
+ TIA_international_settlement:0 "天津共同租界"
+ TIA_international_settlement_DEF:0 "天津共同租界"
  
  
+ TRK_republic:0 "トルキスタン共和国"
+ TRK_republic_DEF:0 "トルキスタン共和国"
  
+ 
+ XIK_warlord:0 "西康軍閥"
+ XIK_warlord_DEF:0 "西康軍閥"
  
 #ヨーロッパ
+ ADR_co-principality:0 "アンドラ共同公国"
+ ADR_co-principality_DEF:0 "アンドラ共同公国"
+ 
+ 
+ LIE_principality:0 "リヒテンシュタイン侯国"
+ LIE_principality_DEF:0 "リヒテンシュタイン侯国"
+ 
+ MCO_principality:0 "モナコ公国"
+ MCO_principality_DEF:0 "モナコ公国"
+ 
+ NTL_kingdom:0 "ネーデルラント王国"
+ NTL_kingdom_DEF:0 "ネーデルラント王国"
+ 
+ SMR_most_serene_republic:0 "晴朗極まる共和国サンマリノ"
+ SMR_most_serene_republic_DEF:0 "晴朗極まる共和国サンマリノ"
+ 
 #アフリカ
+ TGE_international_zone:0 "タンジェ国際地域"
+ TGE_international_zone_DEF:0 "タンジェ国際地域"
+ 
 #新大陸
 #大洋州
 #アメリカ諸州
